--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -31,7 +31,7 @@
         <a href="./index.html" class="header-logo link">Web<span class="span-header">Studio</span></a>
 
         <ul class="menu list">
-          <li><a href="./index.html" class="header-studio link">Studio</a></li>
+          <li><a href="./index.html" class="header-studio link current">Studio</a></li>
           <li><a href="./portfolio.html" class="header-studio link">Portfolio</a></li>
           <li><a href="" class="header-studio link">Contacts</a></li>
         </ul>
@@ -55,7 +55,7 @@
     <section class="section-one">
       <div class="container">
         <h1 class="section-one-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="section-one-button">Order Service</button>
+        <button type="button" class="section-one-button" data-modal-open>Order Service</button>
       </div>
     </section>
 
@@ -67,24 +67,42 @@
 
         <ul class="ul-class list">
           <li class="ul-content">
+
+            <div class="div-icon"><svg class="svg-teg"><use href="./images/images/symbol-defs.svg#icon-icon1"></use></svg></div>
+
             <h3 class="section-two-title">Strategy</h3>
             <p class="section-two-p">Our goal is to identify the business problem
               to walk away with the perfect and creative solution.</p>
           </li>
 
+
+
           <li class="ul-content">
+
+            <div class="div-icon"></div>
+
             <h3 class="section-two-title">Punctuality</h3>
             <p class="section-two-p">Bring the key message to the brand's audience for the best price within the
               shortest possible time.</p>
           </li>
 
+
+
           <li class="ul-content">
+
+            <div class="div-icon"></div>
+
             <h3 class="section-two-title">Diligence</h3>
             <p class="section-two-p">Research and confirm brands that present the
               strongest digital growth opportunities and minimize risk.</p>
           </li>
 
+
+
           <li class="ul-content">
+
+            <div class="div-icon"></div>
+
             <h3 class="section-two-title">Technologies</h3>
             <p class="section-two-p">Design practice focused on digital experiences.
               We bring forth a deep passion for problem-solving.</p>
