--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
   
         <ul class="menu list">
           <li><a href="./index.html" class="header-studio link">Studio</a></li>
-          <li><a href="./portfolio.html" class="header-studio link">Portfolio</a></li>
+          <li><a href="./portfolio.html" class="header-studio link current">Portfolio</a></li>
           <li><a href="" class="header-studio link">Contacts</a></li>
         </ul>
       </nav>
