--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <ul class="ul-class list">
           <li class="ul-content">
 
-            <div class="div-icon"><svg class="svg-teg"><use href="./images/images/symbol-defs.svg#icon-icon1"></use></svg></div>
+            <div class="div-icon"><svg><use href="./images/images/symbol-defs.svg#icon-icon1"></use></svg></div>
 
             <h3 class="section-two-title">Strategy</h3>
             <p class="section-two-p">Our goal is to identify the business problem
@@ -79,7 +79,7 @@
 
           <li class="ul-content">
 
-            <div class="div-icon"></div>
+            <div class="div-icon"><svg><use href="./images/images/symbol-defs.svg#icon-icon2"></use></svg></div>
 
             <h3 class="section-two-title">Punctuality</h3>
             <p class="section-two-p">Bring the key message to the brand's audience for the best price within the
@@ -90,7 +90,7 @@
 
           <li class="ul-content">
 
-            <div class="div-icon"></div>
+            <div class="div-icon"><svg><use href="./images/images/symbol-defs.svg#icon-icon3"></use></svg></div>
 
             <h3 class="section-two-title">Diligence</h3>
             <p class="section-two-p">Research and confirm brands that present the
@@ -101,7 +101,7 @@
 
           <li class="ul-content">
 
-            <div class="div-icon"></div>
+            <div class="div-icon"><svg><use href="./images/images/symbol-defs.svg#icon-icon4"></use></svg></div>
 
             <h3 class="section-two-title">Technologies</h3>
             <p class="section-two-p">Design practice focused on digital experiences.
@@ -133,7 +133,7 @@
         <h2 class="section-three-title">Our Team</h2>
 
 
-        <ul class="ul-class list">
+        <ul class="ul-class list ul-four">
 
           <li class="ul-three-content list-background"><img src="./images/images/img1.jpg" alt="Employee photo"
               width="264">
@@ -141,6 +141,12 @@
             <div class="members-container">
               <h3 class="section-two-title">Mark Guerrero</h3>
               <p class="section-two-p">Product Designer</p>
+              <ul class="ul-class-two list">
+               <li class="li-insta"><a href="" class="insta-a"><svg class="svg-teg-two" width="16" height="16"><use></use></svg></a></li>
+               <li></li>
+               <li></li>
+               <li></li>
+              </ul>
             </div>
           </li>
 
@@ -150,6 +156,12 @@
             <div class="members-container">
               <h3 class="section-two-title">Tom Ford</h3>
               <p class="section-two-p">Frontend Developer</p>
+              <ul class="ul-class-two list">
+                <li class="li-insta"><a href="" class="insta-a"><svg class="svg-teg-two" width="16" height="16"><use></use></svg></a></li>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
             </div>
           </li>
 
@@ -159,6 +171,12 @@
             <div class="members-container">
               <h3 class="section-two-title">Camila Garcia</h3>
               <p class="section-two-p">Marketing</p>
+              <ul class="ul-class-two list">
+                <li class="li-insta"><a href="" class="insta-a"><svg class="svg-teg-two" width="16" height="16"><use></use></svg></a></li>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
             </div>
           </li>
 
@@ -168,6 +186,12 @@
             <div class="members-container">
               <h3 class="section-two-title">Daniel Wilson</h3>
               <p class="section-two-p">UI Designer</p>
+              <ul class="ul-class-two list">
+                <li class="li-insta"><a href="" class="insta-a"><svg class="svg-teg-two" width="16" height="16"><use></use></svg></a></li>
+                <li></li>
+                <li></li>
+                <li></li>
+              </ul>
             </div>
           </li>
         </ul>
