--- a/index.html
+++ b/index.html
@@ -198,12 +198,42 @@
       </div>
     </section>
 
+         <!-- section 5 -->
+
+<section class="section-five">
+<div class="container">
+<h2 class="title-five">Customers</h2>
+
+<ul class="customers-list">
+
+  <li class="li-customers"><a href="" class="a-customers"><svg class="svg-five"><use href=""></use></svg></a></li>
+
+  <li class="li-customers"><a href="" class="a-customers"><svg class="svg-five"><use href=""></use></svg></a></li>
+
+  <li class="li-customers"><a href="" class="a-customers"><svg class="svg-five"><use href=""></use></svg></a></li>
+
+  <li class="li-customers"><a href="" class="a-customers"><svg class="svg-five"><use href=""></use></svg></a></li>
+
+  <li class="li-customers"><a href="" class="a-customers"><svg class="svg-five"><use href=""></use></svg></a></li>
+
+  <li class="li-customers"><a href="" class="a-customers"><svg class="svg-five"><use href=""></use></svg></a></li>
+
+
+</ul>
+
+
+
+
+
+</div>
+</section>
+
   </main>
 
   <!-- Footer -->
 
   <footer class="footer">
-    <div class="container">
+    <div class="container div-footer">
       <a href="./index.html" class="footer-logo link">Web<span class="span-footer">Studio</span></a>
       <p class="footer-p">Increase the flow of customers and sales for your business with
         digital marketing & growth solutions.</p>
