--- a/index.html
+++ b/index.html
@@ -294,6 +294,31 @@
     </div>
 
   </footer>
+
+
+<!-- Window -->
+
+<div data-modal="" class="div-window is-hidden">
+
+<div class="div-window-two">
+<button type="button" data-modal-close class="button-window"><svg class="svg-window" width="8" height="8"><use href=""></use></svg></button>
+
+
+
+
+
+
+
+
+
+
+
+</div>
+
+</div>
+
+
+
 </body>
 
 </html>
