--- a/portfolio.html
+++ b/portfolio.html
@@ -63,7 +63,7 @@
 
         <ul class="list ul-content-portfolio-photo">
 
-          <li class="li-content link"><a href="" class="link"><img src="./images/images/img5.jpg"
+          <li class="li-content link"><a href="" class="link app-class"><img src="./images/images/img5.jpg"
                 alt="Banking App Interface Concept" width="360">
 
               <div class="li-content-div">
@@ -73,7 +73,7 @@
             </a></li>
 
 
-          <li class="li-content link"><a href="" class="link"><img src="./images/images/img6.jpg" alt="Cashless Payment"
+          <li class="li-content link"><a href="" class="link app-class"><img src="./images/images/img6.jpg" alt="Cashless Payment"
                 width="360">
               <div class="li-content-div">
                 <h2 class="main-title section-two-title">Cashless Payment</h2>
@@ -83,7 +83,7 @@
           </li>
 
 
-          <li class="li-content link"><a href="" class="link"><img src="./images/images/img7.jpg" alt="Meditation App"
+          <li class="li-content link"><a href="" class="link app-class"><img src="./images/images/img7.jpg" alt="Meditation App"
                 width="360">
 
               <div class="li-content-div">
@@ -94,7 +94,7 @@
 
 
 
-          <li class="li-content link"><a href="" class="link"><img src="./images/images/img8.jpg" alt="Taxi Service"
+          <li class="li-content link"><a href="" class="link app-class"><img src="./images/images/img8.jpg" alt="Taxi Service"
                 width="360">
 
               <div class="li-content-div">
@@ -105,7 +105,7 @@
 
 
 
-          <li class="li-content link"><a href="" class="link"><img src="./images/images/img9.jpg"
+          <li class="li-content link"><a href="" class="link app-class"><img src="./images/images/img9.jpg"
                 alt="Screen Illustrations" width="360">
 
               <div class="li-content-div">
@@ -116,7 +116,7 @@
 
 
 
-          <li class="li-content link"><a href="" class="link"><img src="./images/images/img10.jpg" alt="Online Courses"
+          <li class="li-content link"><a href="" class="link app-class"><img src="./images/images/img10.jpg" alt="Online Courses"
                 width="360">
 
               <div class="li-content-div">
@@ -127,7 +127,7 @@
 
 
 
-          <li class="li-content link"><a href="" class="link"><img src="./images/images/img11.jpg"
+          <li class="li-content link"><a href="" class="link app-class"><img src="./images/images/img11.jpg"
                 alt="Instagram Stories Concept" width="360">
 
               <div class="li-content-div">
@@ -138,7 +138,7 @@
 
 
 
-          <li class="li-content link"><a href="" class="link"><img src="./images/images/img12.jpg" alt="Organic Food"
+          <li class="li-content link"><a href="" class="link app-class"><img src="./images/images/img12.jpg" alt="Organic Food"
                 width="360">
 
               <div class="li-content-div">
@@ -149,7 +149,7 @@
 
 
 
-          <li class="li-content link"><a href="" class="link"><img src="./images/images/img13.jpg" alt="Fresh Coffee"
+          <li class="li-content link"><a href="" class="link app-class"><img src="./images/images/img13.jpg" alt="Fresh Coffee"
                 width="360">
 
               <div class="li-content-div">
