--- a/portfolio.html
+++ b/portfolio.html
@@ -63,8 +63,9 @@
 
         <ul class="list ul-content-portfolio-photo">
 
-          <li class="li-content link"><a href="" class="link app-class"><img src="./images/images/img5.jpg"
-                alt="Banking App Interface Concept" width="360">
+          <li class="li-content link"><a href="" class="link app-class">
+            <div><img src="./images/images/img5.jpg"
+                alt="Banking App Interface Concept" width="360"></div>
 
               <div class="li-content-div">
                 <h2 class="main-title section-two-title">Banking App Interface Concept</h2>
