--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@
          <!-- section 5 -->
 
 <section class="section-five">
+
 <div class="container">
 <h2 class="title-five">Customers</h2>
 
@@ -272,8 +273,8 @@
 
   <footer class="footer">
 
-  <div>
-    <div class="container div-footer">
+  <div class="div-footer">
+    <div class="container div-footer-two">
       <a href="./index.html" class="footer-logo link">Web<span class="span-footer">Studio</span></a>
       <p class="footer-p">Increase the flow of customers and sales for your business with
         digital marketing & growth solutions.</p>
