--- a/index.html
+++ b/index.html
@@ -274,7 +274,8 @@
   <footer class="footer">
 
   <div class="div-footer">
-    <div class="container div-footer-two">
+
+    <div class="div-footer-two container">
       <a href="./index.html" class="footer-logo link">Web<span class="span-footer">Studio</span></a>
       <p class="footer-p">Increase the flow of customers and sales for your business with
         digital marketing & growth solutions.</p>
@@ -305,15 +306,6 @@
 
 <div class="div-window-two">
 <button type="button" data-modal-close class="button-window"><svg class="svg-window" width="8" height="8"><use href="./images/images/symbol-defs.svg#icon-close-black"></use></svg></button>
-
-
-
-
-
-
-
-
-
 
 
 </div>
