--- a/index.html
+++ b/index.html
@@ -302,17 +302,19 @@
 
 <!-- Window -->
 
-<div data-modal="" class="div-window is-hidden">
+<div class="backdrope is-hidden" data-modal>
 
-<div class="div-window-two">
-<button type="button" data-modal-close class="button-window"><svg class="svg-window" width="8" height="8"><use href="./images/images/symbol-defs.svg#icon-close-black"></use></svg></button>
+<div class="div-window-two" >
+
+<button type="button" class="button-window" data-modal-close><svg class="svg-window" width="8" height="8">
+  <use href="./images/images/symbol-defs.svg#icon-close-black"></use></svg></button>
 
 
 </div>
 
 </div>
 
-
+<script src="./js/modal.js"></script>
 
 </body>
 
