--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
 
   <footer class="footer">
 
-  <div class="div-footer">
+  <div class="div-footer container">
 
-    <div class="div-footer-two container">
+    <div class="div-footer-two ">
       <a href="./index.html" class="footer-logo link">Web<span class="span-footer">Studio</span></a>
       <p class="footer-p">Increase the flow of customers and sales for your business with
         digital marketing & growth solutions.</p>
