--- a/index.html
+++ b/index.html
@@ -245,17 +245,17 @@
 
 <ul class="customers-list">
 
-  <li class="li-customers"><a href="" class="a-customers"><svg class="svg-five" width="104" height="56"><use href="./images/images/icons.svg#icon-logo1"></use></svg></a></li>
+  <li class="li-customers"><a href="" class="a-customers"><svg class="svg-five" width="104" height="56"><use href="./images/icons.svg#icon-logo1"></use></svg></a></li>
 
-  <li class="li-customers"><a href="" class="a-customers"><svg class="svg-five" width="104" height="56"><use href="./images/images/icons.svg#icon-logo2"></use></svg></a></li>
+  <li class="li-customers"><a href="" class="a-customers"><svg class="svg-five" width="104" height="56"><use href="./images/icons.svg#icon-logo2"></use></svg></a></li>
 
-  <li class="li-customers"><a href="" class="a-customers"><svg class="svg-five" width="104" height="56"><use href="./images/images/icons.svg#icon-logo3"></use></svg></a></li>
+  <li class="li-customers"><a href="" class="a-customers"><svg class="svg-five" width="104" height="56"><use href="./images/icons.svg#icon-logo3"></use></svg></a></li>
 
-  <li class="li-customers"><a href="" class="a-customers"><svg class="svg-five" width="104" height="56"><use href="./images/images/icons.svg#icon-logo4"></use></svg></a></li>
+  <li class="li-customers"><a href="" class="a-customers"><svg class="svg-five" width="104" height="56"><use href="./images/icons.svg#icon-logo4"></use></svg></a></li>
 
-  <li class="li-customers"><a href="" class="a-customers"><svg class="svg-five" width="104" height="56"><use href="./images/images/icons.svg#icon-logo5"></use></svg></a></li>
+  <li class="li-customers"><a href="" class="a-customers"><svg class="svg-five" width="104" height="56"><use href="./images/icons.svg#icon-logo5"></use></svg></a></li>
 
-  <li class="li-customers"><a href="" class="a-customers"><svg class="svg-five" width="104" height="56"><use href="./images/images/icons.svg#icon-logo6"></use></svg></a></li>
+  <li class="li-customers"><a href="" class="a-customers"><svg class="svg-five" width="104" height="56"><use href="./images/icons.svg#icon-logo6"></use></svg></a></li>
 
 
 </ul>
@@ -285,13 +285,13 @@
        <p class="footer-p-two">Social media</p>
        <ul class="footer-ul">
 
-        <li class="footer-li"><a href="" class="footer-a"><svg class="svg-footer" width="24" height="24"><use href="./images/images/icons.svg#icon-instagram"></use></svg></a></li>
+        <li class="footer-li"><a href="" class="footer-a"><svg class="svg-footer" width="24" height="24"><use href="./images/icons.svg#icon-instagram"></use></svg></a></li>
         
-        <li class="footer-li"><a href="" class="footer-a"><svg class="svg-footer" width="24" height="24"><use href="./images/images/icons.svg#icon-twitter"></use></svg></a></li>
+        <li class="footer-li"><a href="" class="footer-a"><svg class="svg-footer" width="24" height="24"><use href="./images/icons.svg#icon-twitter"></use></svg></a></li>
 
-        <li class="footer-li"><a href="" class="footer-a"><svg class="svg-footer" width="24" height="24"><use href="./images/images/icons.svg#icon-facebook"></use></svg></a></li>
+        <li class="footer-li"><a href="" class="footer-a"><svg class="svg-footer" width="24" height="24"><use href="./images/icons.svg#icon-facebook"></use></svg></a></li>
         
-        <li class="footer-li"><a href="" class="footer-a"><svg class="svg-footer" width="24" height="24"><use href="./images/images/icons.svg#icon-linkedin"></use></svg></a></li>
+        <li class="footer-li"><a href="" class="footer-a"><svg class="svg-footer" width="24" height="24"><use href="./images/icons.svg#icon-linkedin"></use></svg></a></li>
 
        </ul>
 
@@ -307,7 +307,7 @@
 <div class="div-window-two" >
 
 <button type="button" class="button-window" data-modal-close><svg class="svg-window" width="8" height="8">
-  <use href="./images/images/icons.svg#icon-close-black"></use></svg></button>
+  <use href="./images/icons.svg#icon-close-black"></use></svg></button>
 
 
 </div>
