--- a/portfolio.html
+++ b/portfolio.html
@@ -229,19 +229,19 @@
         <ul class="footer-ul">
   
           <li class="footer-li"><a href="" class="footer-a"><svg class="svg-footer" width="24" height="24">
-                <use href="./images/images/symbol-defs.svg#icon-instagram"></use>
+                <use href="./images/icons.svg#icon-instagram"></use>
               </svg></a></li>
   
           <li class="footer-li"><a href="" class="footer-a"><svg class="svg-footer" width="24" height="24">
-                <use href="./images/images/symbol-defs.svg#icon-twitter"></use>
+                <use href="./images/icons.svg#icon-twitter"></use>
               </svg></a></li>
   
           <li class="footer-li"><a href="" class="footer-a"><svg class="svg-footer" width="24" height="24">
-                <use href="./images/images/symbol-defs.svg#icon-facebook"></use>
+                <use href="./images/icons.svg#icon-facebook"></use>
               </svg></a></li>
   
           <li class="footer-li"><a href="" class="footer-a"><svg class="svg-footer" width="24" height="24">
-                <use href="./images/images/symbol-defs.svg#icon-linkedin"></use>
+                <use href="./images/icons.svg#icon-linkedin"></use>
               </svg></a></li>
   
         </ul>
